--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "18.1.0",
+    "react-markdown": "^8.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
+    "@types/react-copy-to-clipboard": "^5.0.3",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
