--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   },
   "dependencies": {
     "next": "latest",
-    "react": "18.1.0",
+    "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
     "@types/react-copy-to-clipboard": "^5.0.3",
-    "@types/react-dom": "18.0.5",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
+    "typescript": "^4.7.4"
   }
 }
