--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-copy-to-clipboard": "^5.0.3",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.20.0",
+    "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "^4.7.4"
