--- a/.prettierrc
+++ b/.prettierrc
@@ -15,6 +15,5 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "useTabs": false,
-  "vueIndentScriptAndStyle": false,
-  "parser": "json"
+  "vueIndentScriptAndStyle": false
 }
